compiled/microservices/tenants/10-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tenants
  namespace: tenants
spec:
  selector:
    app: tenants
  ports:
    - name: http
      port: 3000
      targetPort: 3000
